--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
     "sassy-datepicker": "^0.10.2",
     "slick-carousel": "^1.8.1",
     "wowjs": "^1.1.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1"
   }
 }
