--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "wowjs": "^1.1.3"
   },
   "devDependencies": {
+    "@types/node": "20.12.7",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.4.5"
   }
 }
