--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-visibility-sensor": "^5.1.1",
     "sassy-datepicker": "^0.10.2",
     "slick-carousel": "^1.8.1",
+    "slugify": "^1.6.6",
     "wowjs": "^1.1.3"
   },
   "devDependencies": {
