--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "isotope-layout": "^3.0.6",
+    "lucide-react": "^0.379.0",
     "next": "13.1.0",
     "react": "18.2.0",
     "react-bootstrap": "^1.6.1",
@@ -23,7 +24,6 @@
     "react-visibility-sensor": "^5.1.1",
     "sassy-datepicker": "^0.10.2",
     "slick-carousel": "^1.8.1",
-    "slugify": "^1.6.6",
     "wowjs": "^1.1.3"
   },
   "devDependencies": {
