--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-, "pages/menu.js"  ],
+, "pages/menu.js", "src/components/sections/Popup.jsx"  ],
   "exclude": [
     "node_modules"
   ]
